Graph Component added

--- a/apps/demo-angular/src/app/app.component.html
+++ b/apps/demo-angular/src/app/app.component.html
@@ -1,4 +1,6 @@
 <nav class="flex bg-red-600">
     test nav
 </nav>
-<gfct-c></gfct-c>
+<div style="display: block;">
+    <gfct-nw-ui></gfct-nw-ui>
+</div>
