--- a/libs/nw-components-angular/src/lib/nw-graph/components/container.component.html
+++ b/libs/nw-components-angular/src/lib/nw-graph/components/container.component.html
@@ -1,1 +1,3 @@
-<h2>Hello from component C from nw-graph</h2>
+<div class="flex" [style.height.px]='viewPortheight' #graphcontainer>
+    <gfct-graph [style.height.px]='viewPortheight'></gfct-graph>
+</div>
