--- a/libs/nw-components-angular/src/lib/nw-graph/components/container.component.html
+++ b/libs/nw-components-angular/src/lib/nw-graph/components/container.component.html
@@ -1,3 +1,5 @@
 <div class="flex" [style.height.px]='viewPortheight' #graphcontainer>
-    <gfct-graph [style.height.px]='viewPortheight'></gfct-graph>
+    <gfct-graph [style.height.px]='viewPortheight'  
+                [containerOfGraph]="graphcontainer">
+    </gfct-graph>
 </div>
