--- a/libs/nw-components-angular/src/lib/nw-graph/components/container.component.html
+++ b/libs/nw-components-angular/src/lib/nw-graph/components/container.component.html
@@ -1,5 +1,5 @@
-<div class="flex" [style.height.px]='viewPortheight' #graphcontainer>
-    <gfct-graph [style.height.px]='viewPortheight'  
+<div class="nw-container" [style.height.px]='viewPortheight' #graphcontainer>
+    <gfct-graph class="svg-section" [style.height.px]='viewPortheight'  
                 [containerOfGraph]="graphcontainer">
     </gfct-graph>
 </div>
