--- a/libs/nw-components-angular/src/lib/nw-graph/components/graph/graph.component.html
+++ b/libs/nw-components-angular/src/lib/nw-graph/components/graph/graph.component.html
@@ -1,2 +1,4 @@
-<svg #svg [attr.width]="viewPortWidth" [attr.height]="viewPortheight">
+<svg #svg [attr.width]="viewPortWidth" 
+    [attr.height]="viewPortheight"
+    style="background-color:green">
 </svg>
