--- a/libs/nw-components-angular/src/lib/components/node/node.component.html
+++ b/libs/nw-components-angular/src/lib/components/node/node.component.html
@@ -1,8 +1,8 @@
 <svg:g #nodeRef 
         class="nw-node" 
-        [attr.transform]="'translate(' + node.x + ',' + node.y + ')'" 
-        [draggableNode] ="node" 
-        [draggableInGraph]="graph" 
+        [attr.transform]="'translate(' + node!.x + ',' + node!.y + ')'" 
+        [draggableNode] ="node!" 
+        [draggableInGraph]="graph!" 
         [tooltip]="node" 
         [ngStyle]="{'opacity': nodeOpacity}" 
         (click)="$event.stopPropagation()" 
@@ -11,16 +11,16 @@
     <svg:g>
         <svg:circle *ngIf="selectedNodes.indexOf(node) !== -1" 
                 class="select-node-circle" 
-                cx="" 
-                cy="9" 
+                cx="0" 
+                cy="0" 
                 [attr.r]="node.r + 4"> 
         </svg:circle> 
         <svg:circle [ngStyle]="nodeStyle" 
                     class="node-circle" 
                     [attr.fill]="node.color" 
                     cx="0" 
-                    cy="9" 
-                    [attr.r]="node.c"> 
+                    cy="0" 
+                    [attr.r]="node.r"> 
         </svg:circle> 
         <svg:circle *ngIf="node.nodeId === rootNodeId" 
                     class="node-circle-root-entity" 
